improve upstream nginx configuration

--- a/molecule/default/files/etc-nginx/conf.d/proxy-default.conf
+++ b/molecule/default/files/etc-nginx/conf.d/proxy-default.conf
@@ -56,6 +56,9 @@ server {
 
         proxy_pass http://omeroreadonly;
         proxy_redirect http://omeroreadonly $scheme://$server_name;
+        proxy_http_version 1.1;
+        proxy_set_header   "Connection" "";
+        add_header OMERO-backend-IP $upstream_addr;
 
         proxy_cache            $cache_zone_name;
         proxy_cache_key        $cache_key;
