--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -194,3 +194,9 @@ nginx_proxy_additional_maps: []
 
 # Start/restart nginx using systemd
 nginx_proxy_systemd_setup: true
+
+max_fails: 3
+
+fail_timeout: 30s
+
+keepalive: 32
